# wrench-engine

./: CMakeLists.txt  README.md  main.cpp
.circleci/: config.yml
cmake/: FindAssimp.cmake
core/: SDL.h  application.cc  application.h  core.cc  core.h  types.h
dependencies/yaml-cpp/: CMakeLists.txt
docs/: Doxyfile
gl/: gl.h
renderer/common/: context.cc  context.h
renderer/gl/: gl_context.cc  gl_context.h  gl_settings.h
src/: main.cpp
src/core/: core.h  error.h  types.h
src/core/time/: clocktime.cc  clocktime.h
src/example/: main.cpp
src/example/resources/: shader.frag  shader.vert
src/example/resources/flat_color.mat/: conf.yml  shader.frag  shader.vert
src/renderer/common/: camera.cc  camera.h  context.cc  context.h  index_buffer.h  layout.cc  layout.h  material.cc  material.h  mesh.cc  mesh.h  object.h  render_states.cc  render_states.h  renderer.cc  renderer.h  resource_loader.h  shader.cc  shader.h  transform.cc  transform.h  vertex_array.cc  vertex_array.h  vertex_buffer.h
src/renderer/gl/: all.h  gl.h  gl_context.cc  gl_context.h  gl_index_buffer.cc  gl_index_buffer.h  gl_renderer.cc  gl_renderer.h  gl_settings.h  gl_shader.cc  gl_shader.h  gl_vertex_array.cc  gl_vertex_array.h  gl_vertex_buffer.cc  gl_vertex_buffer.h
src/window/: window.cc  window.h
window/: window.cc  window.h
